Architecture/k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: djassa-api-policy
spec:
  podSelector:
    matchLabels:
      app: djassa-api
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: edge
        - podSelector:
            matchLabels:
              app: djassa-proxy
      ports:
        - protocol: TCP
          port: 8000
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: djassa-db
        - podSelector:
            matchLabels:
              app: djassa-redis
        - podSelector:
            matchLabels:
              app: djassa-storage
      ports:
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 6379
        - protocol: TCP
          port: 9000
